--- a/_layouts/apispots.html
+++ b/_layouts/apispots.html
@@ -50,7 +50,7 @@
                 <h1>A collection of tools for the booming API economy</h1>
                 <hr>
                 <p>
-                	The technology landscape has changed a lot in the recent years and now
+                	The technology landscape has changed a lot in recent years and now
                 	we are living the API Economy era which is starting to bloom.  APIs
                 	are becoming something more than just "geek" talk and will affect
                 	virtually everybody in the near future.
