Adding BDD project

--- a/_includes/head-swaggered.html
+++ b/_includes/head-swaggered.html
@@ -24,8 +24,11 @@
 <!-- Bootstrap -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.min.css">
 
+
 <!-- Theme -->
-<link rel="stylesheet" href="{{ site.url }}/assets/css/project.min.css">
+<link rel="stylesheet" href="{{ site.url }}/assets/themes/project/css/landing-page.css">
+
+
 
 <!-- Custom Fonts -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
