--- a/_layouts/apispots.html
+++ b/_layouts/apispots.html
@@ -147,7 +147,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="{{ site.url }}/apispots/bdd" class="portfolio-box">
                         <img src="{{ site.url }}/images/apispots/bdd-cycle1.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -155,7 +155,7 @@
                                     Microservices
                                 </div>
                                 <div class="project-name">
-                                    BDD Testing Service for RESTful APIs
+                                    BDD API Testing for Humans
                                 </div>
                             </div>
                         </div>
