--- a/_layouts/project.swaggered.html
+++ b/_layouts/project.swaggered.html
@@ -4,7 +4,7 @@
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
-{% include head-project.html %}
+{% include head-swaggered.html %}
 </head>
 
 <body id="page-top">
