--- a/_layouts/project.bdd.html
+++ b/_layouts/project.bdd.html
@@ -5,7 +5,8 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js" lang="en">
 <!--<![endif]-->
-<head>{% include head-project.html %}
+<head>
+{% include head-project.html %}
 </head>
 
 <body id="page-top" class='bs-docs-home'>
@@ -20,90 +21,51 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a href="../" class="navbar-brand">API Spots - BDD</a>
+				<a href="{{ site.url }}/apispots/bdd" class="navbar-brand">API Spots - BDD</a>
 			</div>
 			<nav class="collapse navbar-collapse bs-navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li><a href="../getting-started/">Getting started</a></li>
-					<li><a href="../css/">CSS</a></li>
-					<li><a href="../components/">Components</a></li>
-					<li><a href="../javascript/">JavaScript</a></li>
-					<li><a href="../customize/">Customize</a></li>
+					<li><a href="{{ site.url }}/apispots/bdd/getting-started/">Getting started</a></li>
+					<li><a href="{{ site.url }}/apispots/bdd/basic-concepts/">Basic concepts</a></li>
 				</ul>
 
 			</nav>
 		</div>
 	</header>
-
-
+	
+	{% if page.landing %}
 	<main class="bs-docs-masthead" id="content" role="main" tabindex="-1">
-	<div class="container">
-		<span
-			class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">BDD</span>
-		<p class="lead">Bootstrap is the most popular HTML, CSS, and JS
-			framework for developing responsive, mobile first projects on the
-			web.</p>
-		<p class="lead">
-			<a href="getting-started#download"
-				class="btn btn-outline-inverse btn-lg"
-				onclick="ga('send', 'event', 'Jumbotron actions', 'Download', 'Download 3.3.4');">Download
-				Bootstrap</a>
-		</p>
-				
-	</div>
-	</main>
-
-	<div class="bs-docs-featurette">
 		<div class="container">
-			<h2 class="bs-docs-featurette-title">Designed for everyone,
-				everywhere.</h2>
-			<p class="lead">Bootstrap makes front-end web development faster
-				and easier. It's made for folks of all skill levels, devices of all
-				shapes, and projects of all sizes.</p>
-
-			<hr class="half-rule">
-
-			<div class="row">
-				<div class="col-sm-4">
-					<img src="assets/img/sass-less.png" alt="Sass and Less support"
-						class="img-responsive">
-					<h3>Preprocessors</h3>
-					<p>
-						Bootstrap ships with vanilla CSS, but its source code utilizes the
-						two most popular CSS preprocessors, <a href="../css/#less">Less</a>
-						and <a href="../css/#sass">Sass</a>. Quickly get started with
-						precompiled CSS or build on the source.
-					</p>
-				</div>
-				<div class="col-sm-4">
-					<img src="assets/img/devices.png" alt="Responsive across devices"
-						class="img-responsive">
-					<h3>One framework, every device.</h3>
-					<p>Bootstrap easily and efficiently scales your websites and
-						applications with a single code base, from phones to tablets to
-						desktops with CSS media queries.</p>
-				</div>
-				<div class="col-sm-4">
-					<img src="assets/img/components.png" alt="Components"
-						class="img-responsive">
-					<h3>Full of features</h3>
-					<p>With Bootstrap, you get extensive and beautiful
-						documentation for common HTML elements, dozens of custom HTML and
-						CSS components, and awesome jQuery plugins.</p>
-				</div>
-			</div>
-
-			<hr class="half-rule">
-
-			<p class="lead">Bootstrap is open source. It's hosted, developed,
-				and maintained on GitHub.</p>
-			<a href="https://github.com/twbs/bootstrap"
-				class="btn btn-outline btn-lg">View the GitHub project</a>
+			<span
+				class="bs-docs-booticon bs-docs-booticon-lg" style='background-color: white!important;'><img src='{{ site.url }}/assets/apispots/bdd/logo.png'></img></span>
+			<p class="lead">{{page.headline}}</p>
+			<p class="lead">
+					<a href="{{ site.url }}/apispots/bdd/getting-started"
+						class="btn btn-outline-inverse btn-lg">Get Started</a>
+		    </p>	
+					
 		</div>
+	</main>
+	
+	{{content}}
+	
+	{% else %}
+	
+	<div class="bs-docs-header" id="content" tabindex="-1">
+      <div class="container">
+        <h1>{{page.headline}}</h1>
+        <p>{{page.description}}</p>
+      </div>
+    </div>
+
+	<div class='container bs-docs-container'>
+		
+	{{content}}
+
 	</div>
-
-
-
+	
+	{% endif %}
+	
 	<!-- jQuery -->
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -111,7 +73,11 @@
 	<!-- Bootstrap Core JavaScript -->
 	<script src="{{ site.url }}/assets/themes/creative/js/bootstrap.min.js"></script>
 
-
+	<!-- highlight.js -->
+	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
+	<script src="{{ site.url }}/assets/js/plugins/gherkin_en.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
+	
 </body>
 
 </html>
