--- a/_includes/head-project.html
+++ b/_includes/head-project.html
@@ -26,6 +26,7 @@
 
 <!-- Theme -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/project.min.css">
+<link rel="stylesheet" href="{{ site.url }}/assets/css/project-custom.css">
 
 <!-- Custom Fonts -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
