--- a/_layouts/project.bdd.html
+++ b/_layouts/project.bdd.html
@@ -27,6 +27,15 @@
 				<ul class="nav navbar-nav">
 					<li><a href="{{ site.url }}/apispots/bdd/getting-started/">Getting started</a></li>
 					<li><a href="{{ site.url }}/apispots/bdd/basic-concepts/">Basic concepts</a></li>
+					<li class="dropdown">
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">API Testing <span class="caret"></span></a>
+			          <ul class="dropdown-menu" role="menu">
+			            <li><a href="{{ site.url }}/apispots/bdd/a-first-example/">A first example</a></li>
+			            <li class="divider"></li>
+			            <li><a href="#">Generic RESTful APIs</a></li>
+			            <li><a href="#">Swagger powered APIs</a></li>
+			          </ul>
+			        </li>
 				</ul>
 
 			</nav>
