--- a/assets/css/project-custom.css
+++ b/assets/css/project-custom.css
@@ -1,3 +1,12 @@
+body {
+  letter-spacing: .01rem;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+
 .hljs {
 	background:transparent!important;
 }
@@ -6,4 +15,24 @@
 	background-color: #d35400!important;
 	background-image: none;
 	color: #ecf0f1!important;
+}
+
+.bs-example.recipe:after {
+	content: 'Recipe'
+}
+
+.bs-example.scenario:after {
+	content: 'Scenario'
+}
+
+.bs-example.ingredient:after {
+	content: 'Ingredient'
+}
+
+.step-definition {
+	color: #9b59b6;
+}
+
+.step-definition .param {
+	color: #e67e22;
 }
