--- a/_layouts/project.swaggered.html
+++ b/_layouts/project.swaggered.html
@@ -28,9 +28,6 @@
                     <li>
                         <a href="#features">Features</a>
                     </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -119,48 +116,57 @@
 
 
     <!-- /.banner -->
-
-    <!-- Footer -->
-    <footer>
-		{% include footer.html %}
-<!-- 
+	<footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#about">About</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#services">Services</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Chris Spiliotopoulos. All Rights Reserved</p>
+                
+                	<p>
+						Designed and built by the <a
+							href="https://twitter.com/chefArchitect" target="_blank">@chefArchitect</a>
+					</p>
+					
+					<div class="social-icons">
+						{% if site.owner.twitter %}<a href="http://twitter.com/{{ site.owner.twitter }}" title="{{ site.owner.name}} on Twitter" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>{% endif %}
+						{% if site.owner.linkedin %}<a href="http://linkedin.com/in/{{ site.owner.linkedin }}" title="{{ site.owner.name}} on LinkedIn" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>{% endif %}
+						{% if site.owner.github %}<a href="{{ site.owner.github }}" title="{{ site.owner.name}} on Github" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>{% endif %}
+					  <a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="fa fa-rss-square fa-2x"></i></a>
+					</div>
+                	
+                	
+					<ul class="list-inline">
+					  <li>Special thanks to </li>
+					  <li class="footer-menu-divider">⋅</li>	
+					{% for credit in site.data.credits.swaggered %}
+					  <li><a href="{{ credit.url }}" target='_blank'>{{ credit.name }}</a></li>
+					  <li class="footer-menu-divider">⋅</li>
+					{% endfor %}
+					</ul>
+                	
+                	<p>Powered by the <a href="{{site.url}}/apispots">API Spots</a></p>
+                	
+                	<p class="copyright text-muted small">
+						Code licensed under <a rel="license"
+							href="https://github.com/twbs/bootstrap/blob/master/LICENSE"
+							target="_blank">MIT</a>, documentation under <a rel="license"
+							href="https://creativecommons.org/licenses/by/3.0/" target="_blank">CC
+							BY 3.0</a>.
+					</p>
+                    
                 </div>
             </div>
         </div>
-        
- -->       
-        
     </footer>
-
-
+	
+	
 	<!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="{{ site.url }}/assets/themes/creative/js/bootstrap.min.js"></script>
 
-
+	{% include ga.html %}
+	
 </body>
 
 </html>
