--- a/_layouts/project.bdd.html
+++ b/_layouts/project.bdd.html
@@ -37,9 +37,15 @@
 			        <li class="dropdown">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Cookbook <span class="caret"></span></a>
 			          <ul class="dropdown-menu" role="menu">
-			            <li><a href="#">Coming soon...</a></li>
+			          	<li><a href="{{ site.url }}/apispots/bdd/cookbook-background">Background</a></li>
+			          	<li class="divider"></li>
+			            <li><a href="{{ site.url }}/apispots/bdd/cookbook-given">Given</a></li>
+			            <li><a href="#">When</a></li>
+			            <li><a href="#">Then</a></li>
+			            <li class="divider"></li>
 			          </ul>
 			        </li>
+			        
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="{{site.url}}/apispots">The API Spots</a></li>
@@ -155,6 +161,7 @@
 	<!-- highlight.js -->
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
+	
 	
 	{% include ga.html %}
 	
