--- a/_layouts/project.swaggered.feature.html
+++ b/_layouts/project.swaggered.feature.html
@@ -33,7 +33,7 @@
         {{ content }}
                 
 		<!-- Download link -->        
-        <div markdown="0" class="text-center" style='margin-top: 40px;'><a href="https://github.com/chefArchitect/swagger.ed/releases/download/{{ site.data.apispots.swaggered.artifact.version }}/swagger.ed.crx" class="btn" style='font-size: 28px; background-color: #f1c40f;'>Download the Chrome extension</a></div>
+        <div markdown="0" class="text-center" style='margin-top: 40px;'><a href="https://github.com/chefArchitect/apispots-browser-swaggered/raw/master/chrome-ext/dist/swagger.ed.crx" class="btn" style='font-size: 28px; background-color: #f1c40f;'>Download the Chrome extension</a></div>
         
         
         {% if (site.owner.disqus-shortname and page.comments) or site.comments %}
